<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/light_purple"
    app:cardCornerRadius="20dp"
    android:layout_margin="10dp">
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/subject_name"
            android:textSize="25sp"
            android:id="@+id/subname"
            android:layout_marginVertical="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/violet"
                android:paddingEnd="7dp"
                android:paddingStart="0dp"
                android:textAlignment="viewEnd"
                android:gravity="end"
                android:text="@string/percent"
                android:textSize="25sp"
                android:id="@+id/percent"
                android:layout_marginVertical="10dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:id="@+id/total"
            android:textColor="@color/white"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attended"
            android:id="@+id/attended"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginVertical="10dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>