<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/layout_background"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="139dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_arrow_back"
                app:tint="#191919" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back"
                android:textColor="#191919"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="96dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:srcCompact="@tools:sample/avatars"/>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="80dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="Create\nAccount"
                    android:textColor="#191919"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_account_circle"
                    android:drawableTint="#696969"
                    android:hint="@string/name"
                    android:padding="15dp"
                    android:textColor="#191919"
                    android:textColorHint="#696969"
                    android:textStyle="bold"
                    tools:targetApi="m" />

                <EditText
                    android:id="@+id/uNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_account_circle"
                    android:drawableTint="#696969"
                    android:hint="@string/username"
                    android:padding="15dp"
                    android:textColor="#191919"
                    android:textColorHint="#696969"
                    android:textStyle="bold"
                    tools:targetApi="m" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:autofillHints="@string/password"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_password_lock"
                    android:drawableTint="#696969"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="#191919"
                    android:textColorHint="#696969"
                    android:textStyle="bold"
                    tools:targetApi="m" />

                <EditText
                    android:id="@+id/classEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@android:color/transparent"
                    android:drawableTint="#696969"
                    android:hint="CLASS"
                    android:padding="15dp"
                    android:textColor="#191919"
                    android:textColorHint="#696969"
                    android:textStyle="bold"
                    tools:targetApi="m" />

                <EditText
                    android:id="@+id/addrEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_address"
                    android:drawableTint="#696969"
                    android:hint="@string/address"
                    android:inputType="textPostalAddress"
                    android:padding="15dp"
                    android:textColor="#191919"
                    android:textColorHint="#696969"
                    android:textStyle="bold"
                    tools:targetApi="m" />

                <EditText
                    android:id="@+id/uidEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@android:color/transparent"
                    android:drawableTint="#696969"
                    android:hint="@string/uid"
                    android:padding="15dp"
                    android:textColor="#191919"
                    android:textColorHint="#696969"
                    android:textStyle="bold"
                    tools:targetApi="m" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>